@@ -150,7 +150,7 @@
 	</extension>
 </addon>
 
-<addon id="plugin.video.willowtv" name="Willow TV" version="1.4.2"
+<addon id="plugin.video.willowtv" name="Willow TV" version="1.4.3"
 	provider-name="AJ">
 	<requires>
 		<import addon="xbmc.python" version="1.0" />
